src/quality/grammars/go/runtime/GoParser.ts
import { ATN } from 'antlr4ts/atn/ATN';
import { ATNDeserializer } from 'antlr4ts/atn/ATNDeserializer';
import { FailedPredicateException } from 'antlr4ts/FailedPredicateException';
import { NotNull } from 'antlr4ts/Decorators';
import { NoViableAltException } from 'antlr4ts/NoViableAltException';
import { Override } from 'antlr4ts/Decorators';
import { Parser } from 'antlr4ts/Parser';
import { ParserRuleContext } from 'antlr4ts/ParserRuleContext';
import { ParserATNSimulator } from 'antlr4ts/atn/ParserATNSimulator';
import { ParseTreeListener } from 'antlr4ts/tree/ParseTreeListener';
import { ParseTreeVisitor } from 'antlr4ts/tree/ParseTreeVisitor';
import { RecognitionException } from 'antlr4ts/RecognitionException';
import { RuleContext } from 'antlr4ts/RuleContext';
//import { RuleVersion } from "antlr4ts/RuleVersion";
import { TerminalNode } from 'antlr4ts/tree/TerminalNode';
import { Token } from 'antlr4ts/Token';
import { TokenStream } from 'antlr4ts/TokenStream';
import { Vocabulary } from 'antlr4ts/Vocabulary';
import { VocabularyImpl } from 'antlr4ts/VocabularyImpl';

import * as Utils from 'antlr4ts/misc/Utils';

import { GoParserVisitor } from './GoParserVisitor';
import { GoParserBase } from '../GoParserBase';

export class GoParser extends GoParserBase {
  public static readonly BREAK = 1;
  public static readonly DEFAULT = 2;
  public static readonly FUNC = 3;
  public static readonly INTERFACE = 4;
  public static readonly SELECT = 5;
  public static readonly CASE = 6;
  public static readonly DEFER = 7;
  public static readonly GO = 8;
  public static readonly MAP = 9;
  public static readonly STRUCT = 10;
  public static readonly CHAN = 11;
  public static readonly ELSE = 12;
  public static readonly GOTO = 13;
  public static readonly PACKAGE = 14;
  public static readonly SWITCH = 15;
  public static readonly CONST = 16;
  public static readonly FALLTHROUGH = 17;
  public static readonly IF = 18;
  public static readonly RANGE = 19;
  public static readonly TYPE = 20;
  public static readonly CONTINUE = 21;
  public static readonly FOR = 22;
  public static readonly IMPORT = 23;
  public static readonly RETURN = 24;
  public static readonly VAR = 25;
  public static readonly NIL_LIT = 26;
  public static readonly IDENTIFIER = 27;
  public static readonly L_PAREN = 28;
  public static readonly R_PAREN = 29;
  public static readonly L_CURLY = 30;
  public static readonly R_CURLY = 31;
  public static readonly L_BRACKET = 32;
  public static readonly R_BRACKET = 33;
  public static readonly ASSIGN = 34;
  public static readonly COMMA = 35;
  public static readonly SEMI = 36;
  public static readonly COLON = 37;
  public static readonly DOT = 38;
  public static readonly PLUS_PLUS = 39;
  public static readonly MINUS_MINUS = 40;
  public static readonly DECLARE_ASSIGN = 41;
  public static readonly ELLIPSIS = 42;
  public static readonly LOGICAL_OR = 43;
  public static readonly LOGICAL_AND = 44;
  public static readonly EQUALS = 45;
  public static readonly NOT_EQUALS = 46;
  public static readonly LESS = 47;
  public static readonly LESS_OR_EQUALS = 48;
  public static readonly GREATER = 49;
  public static readonly GREATER_OR_EQUALS = 50;
  public static readonly OR = 51;
  public static readonly DIV = 52;
  public static readonly MOD = 53;
  public static readonly LSHIFT = 54;
  public static readonly RSHIFT = 55;
  public static readonly BIT_CLEAR = 56;
  public static readonly EXCLAMATION = 57;
  public static readonly PLUS = 58;
  public static readonly MINUS = 59;
  public static readonly CARET = 60;
  public static readonly STAR = 61;
  public static readonly AMPERSAND = 62;
  public static readonly RECEIVE = 63;
  public static readonly DECIMAL_LIT = 64;
  public static readonly BINARY_LIT = 65;
  public static readonly OCTAL_LIT = 66;
  public static readonly HEX_LIT = 67;
  public static readonly FLOAT_LIT = 68;
  public static readonly DECIMAL_FLOAT_LIT = 69;
  public static readonly HEX_FLOAT_LIT = 70;
  public static readonly IMAGINARY_LIT = 71;
  public static readonly RUNE_LIT = 72;
  public static readonly BYTE_VALUE = 73;
  public static readonly OCTAL_BYTE_VALUE = 74;
  public static readonly HEX_BYTE_VALUE = 75;
  public static readonly LITTLE_U_VALUE = 76;
  public static readonly BIG_U_VALUE = 77;
  public static readonly RAW_STRING_LIT = 78;
  public static readonly INTERPRETED_STRING_LIT = 79;
  public static readonly WS = 80;
  public static readonly COMMENT = 81;
  public static readonly TERMINATOR = 82;
  public static readonly LINE_COMMENT = 83;
  public static readonly RULE_sourceFile = 0;
  public static readonly RULE_packageClause = 1;
  public static readonly RULE_importDecl = 2;
  public static readonly RULE_importSpec = 3;
  public static readonly RULE_importPath = 4;
  public static readonly RULE_declaration = 5;
  public static readonly RULE_constDecl = 6;
  public static readonly RULE_constSpec = 7;
  public static readonly RULE_identifierList = 8;
  public static readonly RULE_expressionList = 9;
  public static readonly RULE_typeDecl = 10;
  public static readonly RULE_typeSpec = 11;
  public static readonly RULE_functionDecl = 12;
  public static readonly RULE_methodDecl = 13;
  public static readonly RULE_receiver = 14;
  public static readonly RULE_varDecl = 15;
  public static readonly RULE_varSpec = 16;
  public static readonly RULE_block = 17;
  public static readonly RULE_statementList = 18;
  public static readonly RULE_statement = 19;
  public static readonly RULE_simpleStmt = 20;
  public static readonly RULE_expressionStmt = 21;
  public static readonly RULE_sendStmt = 22;
  public static readonly RULE_incDecStmt = 23;
  public static readonly RULE_assignment = 24;
  public static readonly RULE_assign_op = 25;
  public static readonly RULE_shortVarDecl = 26;
  public static readonly RULE_emptyStmt = 27;
  public static readonly RULE_labeledStmt = 28;
  public static readonly RULE_returnStmt = 29;
  public static readonly RULE_breakStmt = 30;
  public static readonly RULE_continueStmt = 31;
  public static readonly RULE_gotoStmt = 32;
  public static readonly RULE_fallthroughStmt = 33;
  public static readonly RULE_deferStmt = 34;
  public static readonly RULE_ifStmt = 35;
  public static readonly RULE_switchStmt = 36;
  public static readonly RULE_exprSwitchStmt = 37;
  public static readonly RULE_exprCaseClause = 38;
  public static readonly RULE_exprSwitchCase = 39;
  public static readonly RULE_typeSwitchStmt = 40;
  public static readonly RULE_typeSwitchGuard = 41;
  public static readonly RULE_typeCaseClause = 42;
  public static readonly RULE_typeSwitchCase = 43;
  public static readonly RULE_typeList = 44;
  public static readonly RULE_selectStmt = 45;
  public static readonly RULE_commClause = 46;
  public static readonly RULE_commCase = 47;
  public static readonly RULE_recvStmt = 48;
  public static readonly RULE_forStmt = 49;
  public static readonly RULE_forClause = 50;
  public static readonly RULE_rangeClause = 51;
  public static readonly RULE_goStmt = 52;
  public static readonly RULE_type_ = 53;
  public static readonly RULE_typeName = 54;
  public static readonly RULE_typeLit = 55;
  public static readonly RULE_arrayType = 56;
  public static readonly RULE_arrayLength = 57;
  public static readonly RULE_elementType = 58;
  public static readonly RULE_pointerType = 59;
  public static readonly RULE_interfaceType = 60;
  public static readonly RULE_sliceType = 61;
  public static readonly RULE_mapType = 62;
  public static readonly RULE_channelType = 63;
  public static readonly RULE_methodSpec = 64;
  public static readonly RULE_functionType = 65;
  public static readonly RULE_signature = 66;
  public static readonly RULE_result = 67;
  public static readonly RULE_parameters = 68;
  public static readonly RULE_parameterDecl = 69;
  public static readonly RULE_expression = 70;
  public static readonly RULE_primaryExpr = 71;
  public static readonly RULE_unaryExpr = 72;
  public static readonly RULE_conversion = 73;
  public static readonly RULE_operand = 74;
  public static readonly RULE_literal = 75;
  public static readonly RULE_basicLit = 76;
  public static readonly RULE_integer = 77;
  public static readonly RULE_operandName = 78;
  public static readonly RULE_qualifiedIdent = 79;
  public static readonly RULE_compositeLit = 80;
  public static readonly RULE_literalType = 81;
  public static readonly RULE_literalValue = 82;
  public static readonly RULE_elementList = 83;
  public static readonly RULE_keyedElement = 84;
  public static readonly RULE_key = 85;
  public static readonly RULE_element = 86;
  public static readonly RULE_structType = 87;
  public static readonly RULE_fieldDecl = 88;
  public static readonly RULE_string_ = 89;
  public static readonly RULE_embeddedField = 90;
  public static readonly RULE_functionLit = 91;
  public static readonly RULE_index = 92;
  public static readonly RULE_slice_ = 93;
  public static readonly RULE_typeAssertion = 94;
  public static readonly RULE_arguments = 95;
  public static readonly RULE_methodExpr = 96;
  public static readonly RULE_receiverType = 97;
  public static readonly RULE_eos = 98;
  // tslint:disable:no-trailing-whitespace
  public static readonly ruleNames: string[] = [
    'sourceFile',
    'packageClause',
    'importDecl',
    'importSpec',
    'importPath',
    'declaration',
    'constDecl',
    'constSpec',
    'identifierList',
    'expressionList',
    'typeDecl',
    'typeSpec',
    'functionDecl',
    'methodDecl',
    'receiver',
    'varDecl',
    'varSpec',
    'block',
    'statementList',
    'statement',
    'simpleStmt',
    'expressionStmt',
    'sendStmt',
    'incDecStmt',
    'assignment',
    'assign_op',
    'shortVarDecl',
    'emptyStmt',
    'labeledStmt',
    'returnStmt',
    'breakStmt',
    'continueStmt',
    'gotoStmt',
    'fallthroughStmt',
    'deferStmt',
    'ifStmt',
    'switchStmt',
    'exprSwitchStmt',
    'exprCaseClause',
    'exprSwitchCase',
    'typeSwitchStmt',
    'typeSwitchGuard',
    'typeCaseClause',
    'typeSwitchCase',
    'typeList',
    'selectStmt',
    'commClause',
    'commCase',
    'recvStmt',
    'forStmt',
    'forClause',
    'rangeClause',
    'goStmt',
    'type_',
    'typeName',
    'typeLit',
    'arrayType',
    'arrayLength',
    'elementType',
    'pointerType',
    'interfaceType',
    'sliceType',
    'mapType',
    'channelType',
    'methodSpec',
    'functionType',
    'signature',
    'result',
    'parameters',
    'parameterDecl',
    'expression',
    'primaryExpr',
    'unaryExpr',
    'conversion',
    'operand',
    'literal',
    'basicLit',
    'integer',
    'operandName',
    'qualifiedIdent',
    'compositeLit',
    'literalType',
    'literalValue',
    'elementList',
    'keyedElement',
    'key',
    'element',
    'structType',
    'fieldDecl',
    'string_',
    'embeddedField',
    'functionLit',
    'index',
    'slice_',
    'typeAssertion',
    'arguments',
    'methodExpr',
    'receiverType',
    'eos',
  ];

  private static readonly _LITERAL_NAMES: Array<string | undefined> = [
    undefined,
    "'break'",
    "'default'",
    "'func'",
    "'interface'",
    "'select'",
    "'case'",
    "'defer'",
    "'go'",
    "'map'",
    "'struct'",
    "'chan'",
    "'else'",
    "'goto'",
    "'package'",
    "'switch'",
    "'const'",
    "'fallthrough'",
    "'if'",
    "'range'",
    "'type'",
    "'continue'",
    "'for'",
    "'import'",
    "'return'",
    "'var'",
    "'nil'",
    undefined,
    "'('",
    "')'",
    "'{'",
    "'}'",
    "'['",
    "']'",
    "'='",
    "','",
    "';'",
    "':'",
    "'.'",
    "'++'",
    "'--'",
    "':='",
    "'...'",
    "'||'",
    "'&&'",
    "'=='",
    "'!='",
    "'<'",
    "'<='",
    "'>'",
    "'>='",
    "'|'",
    "'/'",
    "'%'",
    "'<<'",
    "'>>'",
    "'&^'",
    "'!'",
    "'+'",
    "'-'",
    "'^'",
    "'*'",
    "'&'",
    "'<-'",
  ];
  private static readonly _SYMBOLIC_NAMES: Array<string | undefined> = [
    undefined,
    'BREAK',
    'DEFAULT',
    'FUNC',
    'INTERFACE',
    'SELECT',
    'CASE',
    'DEFER',
    'GO',
    'MAP',
    'STRUCT',
    'CHAN',
    'ELSE',
    'GOTO',
    'PACKAGE',
    'SWITCH',
    'CONST',
    'FALLTHROUGH',
    'IF',
    'RANGE',
    'TYPE',
    'CONTINUE',
    'FOR',
    'IMPORT',
    'RETURN',
    'VAR',
    'NIL_LIT',
    'IDENTIFIER',
    'L_PAREN',
    'R_PAREN',
    'L_CURLY',
    'R_CURLY',
    'L_BRACKET',
    'R_BRACKET',
    'ASSIGN',
    'COMMA',
    'SEMI',
    'COLON',
    'DOT',
    'PLUS_PLUS',
    'MINUS_MINUS',
    'DECLARE_ASSIGN',
    'ELLIPSIS',
    'LOGICAL_OR',
    'LOGICAL_AND',
    'EQUALS',
    'NOT_EQUALS',
    'LESS',
    'LESS_OR_EQUALS',
    'GREATER',
    'GREATER_OR_EQUALS',
    'OR',
    'DIV',
    'MOD',
    'LSHIFT',
    'RSHIFT',
    'BIT_CLEAR',
    'EXCLAMATION',
    'PLUS',
    'MINUS',
    'CARET',
    'STAR',
    'AMPERSAND',
    'RECEIVE',
    'DECIMAL_LIT',
    'BINARY_LIT',
    'OCTAL_LIT',
    'HEX_LIT',
    'FLOAT_LIT',
    'DECIMAL_FLOAT_LIT',
    'HEX_FLOAT_LIT',
    'IMAGINARY_LIT',
    'RUNE_LIT',
    'BYTE_VALUE',
    'OCTAL_BYTE_VALUE',
    'HEX_BYTE_VALUE',
    'LITTLE_U_VALUE',
    'BIG_U_VALUE',
    'RAW_STRING_LIT',
    'INTERPRETED_STRING_LIT',
    'WS',
    'COMMENT',
    'TERMINATOR',
    'LINE_COMMENT',
  ];
  public static readonly VOCABULARY: Vocabulary = new VocabularyImpl(
    GoParser._LITERAL_NAMES,
    GoParser._SYMBOLIC_NAMES,
    [],
  );

  // @Override
  // @NotNull
  public get vocabulary(): Vocabulary {
    return GoParser.VOCABULARY;
  }
  // tslint:enable:no-trailing-whitespace

  // @Override
  public get grammarFileName(): string {
    return 'GoParser.g4';
  }

  // @Override
  public get ruleNames(): string[] {
    return GoParser.ruleNames;
  }

  // @Override
  public get serializedATN(): string {
    return GoParser._serializedATN;
  }

  protected createFailedPredicateException(
    predicate?: string,
    message?: string,
  ): FailedPredicateException {
    return new FailedPredicateException(this, predicate, message);
  }

  constructor(input: TokenStream) {
    super(input);
    this._interp = new ParserATNSimulator(GoParser._ATN, this);
  }
  // @RuleVersion(0)
  public sourceFile(): SourceFileContext {
    const _localctx: SourceFileContext = new SourceFileContext(
      this._ctx,
      this.state,
    );
    this.enterRule(_localctx, 0, GoParser.RULE_sourceFile);
    let _la: number;
    try {
      this.enterOuterAlt(_localctx, 1);
      {
        this.state = 198;
        this.packageClause();
        this.state = 199;
        this.eos();
        this.state = 205;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while (_la === GoParser.IMPORT) {
          {
            {
              this.state = 200;
              this.importDecl();
              this.state = 201;
              this.eos();
            }
          }
          this.state = 207;
          this._errHandler.sync(this);
          _la = this._input.LA(1);
        }
        this.state = 217;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while (
          (_la & ~0x1f) === 0 &&
          ((1 << _la) &
            ((1 << GoParser.FUNC) |
              (1 << GoParser.CONST) |
              (1 << GoParser.TYPE) |
              (1 << GoParser.VAR))) !==
            0
        ) {
          {
            {
              this.state = 211;
              this._errHandler.sync(this);
              switch (
                this.interpreter.adaptivePredict(this._input, 1, this._ctx)
              ) {
                case 1:
                  {
                    this.state = 208;
                    this.functionDecl();
                  }
                  break;

                case 2:
                  {
                    this.state = 209;
                    this.methodDecl();
                  }
                  break;

                case 3:
                  {
                    this.state = 210;
                    this.declaration();
                  }
                  break;
              }
              this.state = 213;
              this.eos();
            }
          }
          this.state = 219;
          this._errHandler.sync(this);
          _la = this._input.LA(1);
        }
        this.state = 220;
        this.match(GoParser.EOF);
      }
    } catch (re) {
      if (re instanceof RecognitionException) {
        _localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return _localctx;
  }
  // @RuleVersion(0)
  public packageClause(): PackageClauseContext {
    const _localctx: PackageClauseContext = new PackageClauseContext(
      this._ctx,
      this.state,
    );
    this.enterRule(_localctx, 2, GoParser.RULE_packageClause);
    try {
      this.enterOuterAlt(_localctx, 1);
      {
        this.state = 222;
        this.match(GoParser.PACKAGE);
        this.state = 223;
        _localctx._packageName = this.match(GoParser.IDENTIFIER);
      }
    } catch (re) {
      if (re instanceof RecognitionException) {
        _localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return _localctx;
  }
  // @RuleVersion(0)
  public importDecl(): ImportDeclContext {
    const _localctx: ImportDeclContext = new ImportDeclContext(
      this._ctx,
      this.state,
    );
    this.enterRule(_localctx, 4, GoParser.RULE_importDecl);
    let _la: number;
    try {
      this.enterOuterAlt(_localctx, 1);
      {
        this.state = 225;
        this.match(GoParser.IMPORT);
        this.state = 237;
        this._errHandler.sync(this);
        switch (this._input.LA(1)) {
          case GoParser.IDENTIFIER:
          case GoParser.DOT:
          case GoParser.RAW_STRING_LIT:
          case GoParser.INTERPRETED_STRING_LIT:
            {
              this.state = 226;
              this.importSpec();
            }
            break;
          case GoParser.L_PAREN:
            {
              this.state = 227;
              this.match(GoParser.L_PAREN);
              this.state = 233;
              this._errHandler.sync(this);
              _la = this._input.LA(1);
              while (
                _la === GoParser.IDENTIFIER ||
                _la === GoParser.DOT ||
                _la === GoParser.RAW_STRING_LIT ||
                _la === GoParser.INTERPRETED_STRING_LIT
              ) {
                {
                  {
                    this.state = 228;
                    this.importSpec();
                    this.state = 229;
                    this.eos();
                  }
                }
                this.state = 235;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
              }
              this.state = 236;
              this.match(GoParser.R_PAREN);
            }
            break;
          default:
            throw new NoViableAltException(this);
        }
      }
    } catch (re) {
      if (re instanceof RecognitionException) {
        _localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return _localctx;
  }
  // @RuleVersion(0)
  public importSpec(): ImportSpecContext {
    const _localctx: ImportSpecContext = new ImportSpecContext(
      this._ctx,
      this.state,
    );
    this.enterRule(_localctx, 6, GoParser.RULE_importSpec);
    let _la: number;
    try {
      this.enterOuterAlt(_localctx, 1);
      {
        this.state = 240;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if (_la === GoParser.IDENTIFIER || _la === GoParser.DOT) {
          {
            this.state = 239;
            _localctx._alias = this._input.LT(1);
            _la = this._input.LA(1);
            if (!(_la === GoParser.IDENTIFIER || _la === GoParser.DOT)) {
              _localctx._alias = this._errHandler.recoverInline(this);
            } else {
              if (this._input.LA(1) === Token.EOF) {
                this.matchedEOF = true;
              }

              this._errHandler.reportMatch(this);
              this.consume();
            }
          }
        }
